force-app/main/default/objects/CTI_Area_with_Sector__c/CTI_Area_with_Sector__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>CTI Area with Sector</label>
</CustomObject>