force-app/main/default/objects/CTI_Area_with_Sector__c/fields/Area__c.field-meta.xml
<CustomField>
    <fullName>Area__c</fullName>
    <label>Area</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>