force-app/main/default/objects/CTI_Area_with_Sector__c/fields/Sector__c.field-meta.xml
<CustomField>
    <fullName>Sector__c</fullName>
    <label>Sector</label>
    <length>6</length>
    <required>true</required>
    <type>Text</type>
</CustomField>